--- a/emnesite.html
+++ b/emnesite.html
@@ -2,6 +2,10 @@
 <html lang="da">
 
 <head>
+    <link rel="apple-touch-icon" sizes="180x180" href="billeder/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="billeder/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="billeder/favicon-16x16.png">
+    <link rel="manifest" href="site.webmanifest">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -36,7 +40,7 @@
 
         <ul class="active drop-down2 closed border">
             <li>
-                <a class="nav-button2 leavelink" href="web.html">Web</a>
+                <a id="tryk" class="nav-button2 leavelink" href="web.html">Web</a>
             </li>
 
             <li>
@@ -105,7 +109,7 @@
 
             <div class="row emneimgbox">
                 <div class="column emne1">
-                    <img src="billeder/emnesite1.png" alt="pic" onclick="myFunction(this);">
+                    <img src="billeder/emnesite1.webp" alt="pic" onclick="myFunction(this);">
                 </div>
                 <div class="column emne2">
                     <img src="billeder/emnesite2.png" alt="pic" onclick="myFunction(this);">
@@ -137,7 +141,7 @@
                 </p>
             </div>
 
-            <a href="cv.html">
+            <a href="https://hvidloegsida.dk/kea/02_web/02_emnesite/emnesite/index.html">
                 <div id="emneknap" class="knap">
                     <div class="knapbbypink">
 
