--- a/ommig.html
+++ b/ommig.html
@@ -2,6 +2,10 @@
 <html lang="da">
 
 <head>
+    <link rel="apple-touch-icon" sizes="180x180" href="billeder/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="billeder/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="billeder/favicon-16x16.png">
+    <link rel="manifest" href="site.webmanifest">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -24,7 +28,7 @@
         </label>
         <ul class="active drop-down1 closed border">
             <li>
-                <a class="nav-button1 leavelink" href="ommig.html">Om mig</a>
+                <a id="tryk" class="nav-button1 leavelink" href="ommig.html">Om mig</a>
             </li>
 
             <li>
