--- a/animation.html
+++ b/animation.html
@@ -10,6 +10,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <meta name="robots" content="noindex, nofollow">
 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="design.css">
@@ -108,16 +109,16 @@
         <div class="anigrid1">
             <div class="row aniimgbox">
                 <div class="column ani1">
-                    <img src="billeder/ani1.png" alt="pic" onclick="myFunction(this);">
+                    <img src="billeder/ani1.webp" alt="pic" onclick="myFunction(this);">
                 </div>
                 <div class="column ani2">
-                    <img src="billeder/ani2.png" alt="pic" onclick="myFunction(this);">
+                    <img src="billeder/ani2.webp" alt="pic" onclick="myFunction(this);">
                 </div>
                 <div class="column ani3">
-                    <img src="billeder/ani3.png" alt="pic" onclick="myFunction(this);">
+                    <img src="billeder/ani3.webp" alt="pic" onclick="myFunction(this);">
                 </div>
                 <div class="column ani4">
-                    <img src="billeder/ani4.png" alt="pic" onclick="myFunction(this);">
+                    <img src="billeder/ani4.webp" alt="pic" onclick="myFunction(this);">
                 </div>
 
             </div>
