--- a/emnesite.html
+++ b/emnesite.html
@@ -10,6 +10,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <meta name="robots" content="noindex, nofollow">
 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="design.css">
@@ -112,13 +113,13 @@
                     <img src="billeder/emnesite1.webp" alt="pic" onclick="myFunction(this);">
                 </div>
                 <div class="column emne2">
-                    <img src="billeder/emnesite2.png" alt="pic" onclick="myFunction(this);">
+                    <img src="billeder/emnesite2.webp" alt="pic" onclick="myFunction(this);">
                 </div>
                 <div class="column emne3">
-                    <img src="billeder/emnesite3.png" alt="pic" onclick="myFunction(this);">
+                    <img src="billeder/emnesite3.webp" alt="pic" onclick="myFunction(this);">
                 </div>
                 <div class="column emne4">
-                    <img src="billeder/emnesite4.png" alt="pic" onclick="myFunction(this);">
+                    <img src="billeder/emnesite4.webp" alt="pic" onclick="myFunction(this);">
                 </div>
 
             </div>
