--- a/passionsvideo.html
+++ b/passionsvideo.html
@@ -10,6 +10,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <meta name="robots" content="noindex, nofollow">
 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="design.css">
@@ -107,16 +108,16 @@
         <div class="passiongrid1">
             <div class="row passionimgbox">
                 <div class="column passion1">
-                    <img src="billeder/passion1.png" alt="pic" onclick="myFunction(this);">
+                    <img src="billeder/passion1.webp" alt="pic" onclick="myFunction(this);">
                 </div>
                 <div class="column passion2">
-                    <img src="billeder/passion2.png" alt="pic" onclick="myFunction(this);">
+                    <img src="billeder/passion2.webp" alt="pic" onclick="myFunction(this);">
                 </div>
                 <div class="column passion3">
-                    <img src="billeder/passion3.png" alt="pic" onclick="myFunction(this);">
+                    <img src="billeder/passion3.webp" alt="pic" onclick="myFunction(this);">
                 </div>
                 <div class="column passion4">
-                    <img src="billeder/passion4.png" alt="pic" onclick="myFunction(this);">
+                    <img src="billeder/passion4.webp" alt="pic" onclick="myFunction(this);">
                 </div>
 
             </div>
