--- a/process.html
+++ b/process.html
@@ -9,6 +9,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=div, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <meta name="robots" content="noindex, nofollow">
     <link rel="stylesheet" href="design.css">
     <title>Process</title>
 </head>
@@ -104,16 +106,16 @@
         <div class="processgrid1">
             <div class="row processimgbox">
                 <div class="column process1">
-                    <img src="billeder/process1.png" alt="pic" onclick="myFunction(this);">
+                    <img src="billeder/process1.webp" alt="pic" onclick="myFunction(this);">
                 </div>
                 <div class="column process2">
-                    <img src="billeder/process2.png" alt="pic" onclick="myFunction(this);">
+                    <img src="billeder/process2.webp" alt="pic" onclick="myFunction(this);">
                 </div>
                 <div class="column process3">
-                    <img src="billeder/process3.png" alt="pic" onclick="myFunction(this);">
+                    <img src="billeder/process3.webp" alt="pic" onclick="myFunction(this);">
                 </div>
                 <div class="column process4">
-                    <img src="billeder/process4.png" alt="pic" onclick="myFunction(this);">
+                    <img src="billeder/process4.webp" alt="pic" onclick="myFunction(this);">
                 </div>
 
             </div>
