--- a/prototype.html
+++ b/prototype.html
@@ -10,6 +10,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <meta name="robots" content="noindex, nofollow">
 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="design.css">
@@ -106,10 +107,10 @@
         <div class="protogrid1">
             <div class="row protoimgbox">
                 <div class="column proto1">
-                    <img src="billeder/proto1.png" alt="pic" onclick="myFunction(this);">
+                    <img src="billeder/proto1.webp" alt="pic" onclick="myFunction(this);">
                 </div>
                 <div class="column proto2">
-                    <img src="billeder/proto2.png" alt="pic" onclick="myFunction(this);">
+                    <img src="billeder/proto2.webp" alt="pic" onclick="myFunction(this);">
                 </div>
 
 
