--- a/sketches.html
+++ b/sketches.html
@@ -10,6 +10,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <meta name="robots" content="noindex, nofollow">
 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="design.css">
@@ -107,13 +108,13 @@
         <div class="sketchgrid1">
             <div class="row sketchimgbox">
                 <div class="column sketch1">
-                    <img src="billeder/sketch1.png" alt="pic" onclick="myFunction(this);">
+                    <img src="billeder/sketch1.webp" alt="pic" onclick="myFunction(this);">
                 </div>
                 <div class="column sketch2">
-                    <img src="billeder/sketch2.png" alt="pic" onclick="myFunction(this);">
+                    <img src="billeder/sketch2.webp" alt="pic" onclick="myFunction(this);">
                 </div>
                 <div class="column sketch3">
-                    <img src="billeder/sketch3.png" alt="pic" onclick="myFunction(this);">
+                    <img src="billeder/sketch3.webp" alt="pic" onclick="myFunction(this);">
                 </div>
 
 
