--- a/studiestarts.html
+++ b/studiestarts.html
@@ -10,6 +10,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <meta name="robots" content="noindex, nofollow">
 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="design.css">
@@ -109,16 +110,16 @@
 
             <div class="row studieimgbox">
                 <div class="column studie1">
-                    <img src="billeder/studiestart1.png" alt="pic" onclick="myFunction(this);">
+                    <img src="billeder/studiestart1.webp" alt="pic" onclick="myFunction(this);">
                 </div>
                 <div class="column studie2">
-                    <img src="billeder/studiestart2.png" alt="pic" onclick="myFunction(this);">
+                    <img src="billeder/studiestart2.webp" alt="pic" onclick="myFunction(this);">
                 </div>
                 <div class="column studie3">
-                    <img src="billeder/studiestart3.png" alt="pic" onclick="myFunction(this);">
+                    <img src="billeder/studiestart3.webp" alt="pic" onclick="myFunction(this);">
                 </div>
                 <div class="column studie4">
-                    <img src="billeder/studiestart4.png" alt="pic" onclick="myFunction(this);">
+                    <img src="billeder/studiestart4.webp" alt="pic" onclick="myFunction(this);">
                 </div>
 
             </div>
