--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         </div>
         <div class="indexportfolio">Portfolio</div>
         <div class="indexcitat">
-            "What makes us different, also makes us stand out"
+            "Do you believe in faries? Because I do - let me show you"
         </div>
         <a href="ommig.html">
             <div id="indexknap" class="knap">
