--- a/process.html
+++ b/process.html
@@ -129,11 +129,18 @@
 
             <div class="processgrid">
                 <h1 class="processoverskrift1">Process</h1>
-                <h2 class="processoverskrift2">Hvad har min process været?</h2>
-                <p class="processtxt">Prototypen er lavet i adobe XD. Jeg lærte om hvordan man kan forbinder de
-                    forskellige
-                    artboards of får dem til at virke
-                    som hjemmeside.
+                <h2 class="processoverskrift2">Inspiration:</h2>
+                <p class="processtxt">Da jeg skulle brainstorme designet til min hjemmeside, tog jeg udgangspunkt i mine
+                    barndomsinteresser. <br> <br>
+                    Ville gerne have
+                    at mit site skulle udstråle magisk feminin energy.
+                    <br>Derfor har jeg taget min interesse fra Barbie,
+                    Winx Club og Månestens
+                    hjemmeside, som alle er inkluderet i mit Moodboard. <br>
+                    <br>
+                    Billedet af krystal solopfangeren er et billede jeg selv har taget med CANON kamera, som er med til
+                    at forstærke ideén
+                    om en magisk verden.
                 </p>
             </div>
 
