--- a/animation.html
+++ b/animation.html
@@ -124,18 +124,21 @@
             </div>
 
             <div class="container">
-                <span onclick="this.parentElement.style.display='none'" class="closebtn">&times;</span>
                 <img id="expandedImg" style="width:100%">
-                <div id="imgtext"></div>
             </div>
 
 
             <div class="anigrid">
                 <h1 class="anioverskrift1">Animation</h1>
                 <h2 class="anioverskrift2">Hvad har jeg lært?</h2>
-                <p class="anitxt">Prototypen er lavet i adobe XD. Jeg lærte om hvordan man kan forbinder de forskellige
-                    artboards of får dem til at virke
-                    som hjemmeside.
+                <p class="anitxt">I dette tema har jeg lært en masse om Illustrator og SVG format. Jeg har også lært om
+                    andre formater som MP3 og WAV. <br>Jeg
+                    lærte også om hvordan bruger og linker Javascript, HTML og CSS sammen.
+                    <br> Vi byggede videre på CSS ved at lære om hvordan
+                    man laver animationer med keyframes.
+                    <br>
+                    Inden spillet skulle kodes, lavede jeg også aktivitetsdiagram og statemachine diagram.
+
                 </p>
             </div>
             <a href="https://hvidloegsida.dk/kea/04_animation/website/index.html">
