--- a/passionsvideo.html
+++ b/passionsvideo.html
@@ -123,9 +123,7 @@
             </div>
 
             <div class="container">
-                <span onclick="this.parentElement.style.display='none'" class="closebtn">&times;</span>
                 <img id="expandedImg" style="width:100%">
-                <div id="imgtext"></div>
             </div>
 
 
@@ -133,10 +131,15 @@
             <div class="passiongrid">
                 <h1 class="passionoverskrift1">Passions video</h1>
                 <h2 class="passionoverskrift2">Hvad har jeg lært?</h2>
-                <p class="passiontxt">Prototypen er lavet i adobe XD. Jeg lærte om hvordan man kan forbinder de
-                    forskellige
-                    artboards of får dem til at virke
-                    som hjemmeside.
+                <p class="passiontxt">I dette tema lærte jeg om hvordan man lægger en video om på en hjemmeside, samt
+                    hvordan man laver storyboard.
+                    <br>
+                    Produktionen af passions videoen var også første gang vi arbejde i grupper. <br>Her lærte jeg også
+                    en
+                    del om planlægning af
+                    et projekt med en anden.
+                    <br>
+                    For at producere videoerne lærte jeg også at arbejde i Adobe premiere pro.
                 </p>
             </div>
             <a href="http://hvidloegsida.dk/kea/05_indhold/clara/index.html">
