--- a/prototype.html
+++ b/prototype.html
@@ -117,9 +117,8 @@
             </div>
 
             <div class="container">
-                <span onclick="this.parentElement.style.display='none'" class="closebtn">&times;</span>
                 <img id="expandedImg" style="width:100%">
-                <div id="imgtext"></div>
+
             </div>
 
 
@@ -131,6 +130,9 @@
                     forskellige
                     artboards of får dem til at virke
                     som hjemmeside.
+                    <br>
+                    Inden vi skulle lave vores første pitch, skulle vi udføre et 'five-act interview' i klasen på
+                    hinandens prototyper.
                 </p>
             </div>
             <a href="https://xd.adobe.com/view/a2e84d28-e340-4827-bbdf-0fb0c41650dc-f7bb/">
