--- a/virksomhedssite.html
+++ b/virksomhedssite.html
@@ -124,9 +124,8 @@
             </div>
 
             <div class="container">
-                <span onclick="this.parentElement.style.display='none'" class="closebtn">&times;</span>
                 <img id="expandedImg" style="width:100%">
-                <div id="imgtext"></div>
+
             </div>
 
 
@@ -134,10 +133,14 @@
             <div class="virksomhedgrid">
                 <h1 class="virksomhedoverskrift1">Re-design</h1>
                 <h2 class="virksomhedoverskrift2">Hvad har jeg lært?</h2>
-                <p class="virksomhedtxt">Prototypen er lavet i adobe XD. Jeg lærte om hvordan man kan forbinder de
-                    forskellige
-                    artboards of får dem til at virke
-                    som hjemmeside.
+                <p class="virksomhedtxt">I denne del skulle vi kode sammen i grupper, så her lærte jeg del om hvordan
+                    man bruger GitHub.
+                    <br>
+                    Vi blev introduceret til bla. lighthouse test, bert-test osv.
+                    <br>
+                    I slutningen skulle vi i grupperne fremlægge.
+                    <br>Her lærte vi om hvordan man satte en god præsentation sammen, hvor man pitchede et
+                    hjemmesidedesign.
                 </p>
             </div>
             <a href="https://ubiquitous-pasca-cb58db.netlify.app/">
